# Octopus

./: CREDITS  LICENSE  README.md  octopus.cabal
app/: Examples.hs  Main.hs
src/: Affine3D.hs  Color.hs  DrawingExamples.hs  InverseSemigroup.hs  LoadShader.hs  MatrixOpt.hs  Octopus.hs  OctopusIntention.hs  PMVector.hs  RunOctopus.hs  TemporalOctopus.hs  UtilGLFW.hs  UtilJuicy.hs
src/Shaders/: shader.f.glsl  shader.g.glsl  shader.g1.glsl  shader.skybox.f.glsl  shader.skybox.v.glsl  shader.v.glsl
